Responsividade para pagina web ok

--- a/index.html
+++ b/index.html
@@ -15,20 +15,36 @@
 <body>
     <header>
         <div class="container">
+
             <div class="menu-esq">
                 <img class="logo" src="./images/logo-netflix.png" alt="logo da netflix">
                 <nav>
-                    <a href="">Início</a>
-                    <a href="">Séries</a>
-                    <a href="">Filmes</a>
-                    <a href="">Minha lista</a>
+
+                    <button class="botao-menu-nav hide" onclick="menu()">
+                        Navegar
+                        <i class="fas fa-sort-down"></i>
+                    </button>
+
+                    
+                    <div id="menu-nav">
+                        <button class="item-menu">Início</button>
+                        <button class="item-menu">Séries</button>
+                        <button class="item-menu">Filmes</button>
+                        <button class="item-menu">Minha lista</button>
+                    </div>
+
                 </nav>
             </div>
+
             <div class="menu-dir">
-                <div>
-                    <button class="botao-menu">
+                <div class="search-bar hide">
+                    <button class="botao-search" onclick="searchButton()">
                         <i class="fas fa-search"></i>
                     </button>
+                    <input type="text"
+                           id="search-field"
+                           class="hide"
+                           placeholder="Títulos, gente e gêneros">
                 </div>
                 <div>
                     <button class="botao-menu infantil">
